--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,34 @@
+2007-07-06  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Phase one of adding an SQLite games database.
+
+	* configure.ac:
+	Add check for sqlite3 package.
+
+	* src/Makefile.am:
+	Add gva-db.[ch].
+	Add flags for linking to libsqlite3.
+
+	* src/gva-common.h:
+	#include <sqlite3.h>
+
+	* src/gva-db.[ch]:
+	New source files provide an interface to the sqlite3 database.
+
+	* src/gva-error.[ch]:
+	Add GVA_SQLITE_ERROR.
+
+	* src/gva-parser.c:
+	Populate the sqlite3 database instead of the GtkTreeModel.
+	This makes the Properties window less useful for now, but the
+	next phase will populate the GtkTreeModel by way of a database
+	query.  The resulting database is currently under 2 MB, but does
+	not include BIOS, ROM, disk, chip, or dipswitch information yet.
+
+	* src/gva-xmame.c (gva_xmame_get_total_supported):
+	New function returns the total number of supported games.
+	Useful for reporting progress while building the database.
+
 2007-07-04  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/gva-main.c:
