--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-12  Matthew Barnes  <mbarnes@redhat.com>
 
+	* src/gva-game-store.c (gva_game_store_new_from_query):
+	Fix a couple bugs.  It seems to be working!
+
+2007-07-12  Matthew Barnes  <mbarnes@redhat.com>
+
 	* data/gnome-video-arcade.schemas:
 	Add "version" key.
 
