--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ GNOME Video Arcade 0.3.0
         * Relicense code under the terms of the GNU GPL v3.
         * Program now uses an SQLite database to manage game information.
         * Basic properties window with game history (if available).
-        * Remember column order in main window.
+        * Remember configuration of columns in main window.
 
 GNOME Video Arcade 0.2.0
 ========================
