--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-18  Matthew Barnes  <mbarnes@redhat.com>
+
+	* README: First draft.
+
 2007-07-17  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/gva-ui.c (action_about_cb):
