--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,16 @@
+GNOME Video Arcade 0.3.1
+========================
+
+        Released July ?? 2007
+
+        What's New
+        ----------
+        Preliminary support for sdlmame.
+
 GNOME Video Arcade 0.3.0
 ========================
 
-        Released July ??, 2007
+        Released July 15 2007
 
         What's New
         ----------
